# streamlit-image-classification

./: .gitignore  bird_species_classifier.ipynb  pyproject.toml  requirement.txt
app/: app.py
