[tool.poetry]
name = "streamlit-image-classification"
version = "0.1.0"
description = ""
authors = ["Camille Brodin <camillebrodin@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
streamlit = "^1.32"
pytorch-lightning = "^2.6.1"
clearml = "^2.1.3"
rich = "^14.3.3"
tqdm = "^4.67.3"
split-folders = "^0.6.1"
simple-parsing = "^0.1.8"
albumentations = "^2.0.8"
matplotlib = "^3.10.8"
torchvision = "^0.25.0"
transformers = "^5.2.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
